# EllipsoidFittingTools

./: CMakeLists.txt
data/: many_kxs.txt  synth_kxky.txt
docs/: wanted_features.txt
src/cuda_kernels/: GpuSolver.cu  GpuSolver.h
src/debug/: benchmark.cpp  benchmark.hpp
src/functions/: ChanVese3D.hpp  DistPointHyperellipsoid.hpp  Ellipsoid.cpp  Ellipsoid.hpp  EllipsoidLeastSquareFit.cpp  EllipsoidLeastSquareFit.hpp  EllipsoidMinimizer.cpp  EllipsoidMinimizer.hpp  FDGradient.cpp  FDGradient.hpp  FDHessian.cpp  FDHessian.hpp  FDJacobian.cpp  FDJacobian.hpp  Hyperellipsoid.hpp  MatrixAlgorithms.cpp  MatrixAlgorithms.hpp  MatrixHelpers.cpp  MatrixHelpers.hpp  Minimizer.cpp  Minimizer.hpp  Minimizer1.cpp  Minimizer1.hpp  MinimizerN.cpp  MinimizerN.hpp  OrientedBox.hpp  PyPlot.cpp  PyPlot.hpp  Rotation.hpp  TaskMaster.hpp  TaskWorker.hpp  TiffReader.cpp  TiffReader.hpp  ellipsoidHelpers.cpp  ellipsoidHelpers.hpp  types.hpp
src/projects/EllipsoidFitting/: RandomRotationMatrix.m  createImagesFromRandomVesicles.m  drift_experiment_plot.py  main.cpp  plotError.py  register.m
src/projects/EllipsoidFitting/data/Vesicle1/: VesicleSyn1sec224.txt  VesicleSyn1sec225.txt  VesicleSyn1sec226.txt  VesicleSyn1sec227.txt  VesicleSyn1sec228.txt  VesicleSyn1sec229.txt  VesicleSyn1sec230.txt  VesicleSyn1sec231.txt  VesicleSyn1sec232.txt  VesicleSyn1sec233.txt  VesicleSyn1sec234.txt
src/projects/EllipsoidFitting/data/Vesicle10/: VesicleSyn1sec181.txt  VesicleSyn1sec182.txt  VesicleSyn1sec183.txt  VesicleSyn1sec184.txt  VesicleSyn1sec185.txt  VesicleSyn1sec186.txt  VesicleSyn1sec187.txt  VesicleSyn1sec188.txt  VesicleSyn1sec189.txt  VesicleSyn1sec190.txt
src/projects/EllipsoidFitting/data/Vesicle11/: VesicleSyn1sec185.txt  VesicleSyn1sec186.txt  VesicleSyn1sec187.txt  VesicleSyn1sec188.txt  VesicleSyn1sec189.txt  VesicleSyn1sec190.txt  VesicleSyn1sec191.txt  VesicleSyn1sec192.txt  VesicleSyn1sec193.txt  VesicleSyn1sec194.txt  VesicleSyn1sec195.txt
src/projects/EllipsoidFitting/data/Vesicle12/: VesicleSyn1sec181.txt  VesicleSyn1sec182.txt  VesicleSyn1sec183.txt  VesicleSyn1sec184.txt  VesicleSyn1sec185.txt  VesicleSyn1sec186.txt  VesicleSyn1sec187.txt  VesicleSyn1sec188.txt
src/projects/EllipsoidFitting/data/Vesicle13/: VesicleSyn1sec190.txt  VesicleSyn1sec191.txt  VesicleSyn1sec192.txt  VesicleSyn1sec193.txt  VesicleSyn1sec194.txt  VesicleSyn1sec195.txt  VesicleSyn1sec196.txt  VesicleSyn1sec197.txt  VesicleSyn1sec198.txt  VesicleSyn1sec199.txt
src/projects/EllipsoidFitting/data/Vesicle14/: VesicleSyn1sec190.txt  VesicleSyn1sec191.txt  VesicleSyn1sec192.txt  VesicleSyn1sec193.txt  VesicleSyn1sec194.txt  VesicleSyn1sec195.txt  VesicleSyn1sec196.txt
src/projects/EllipsoidFitting/data/Vesicle15/: VesicleSyn1sec194.txt  VesicleSyn1sec195.txt  VesicleSyn1sec196.txt  VesicleSyn1sec197.txt  VesicleSyn1sec198.txt  VesicleSyn1sec199.txt  VesicleSyn1sec200.txt
src/projects/EllipsoidFitting/data/Vesicle16/: VesicleSyn1sec194.txt  VesicleSyn1sec195.txt  VesicleSyn1sec196.txt  VesicleSyn1sec197.txt  VesicleSyn1sec198.txt
src/projects/EllipsoidFitting/data/Vesicle17/: VesicleSyn1sec190.txt  VesicleSyn1sec191.txt  VesicleSyn1sec192.txt  VesicleSyn1sec193.txt  VesicleSyn1sec194.txt  VesicleSyn1sec195.txt  VesicleSyn1sec196.txt  VesicleSyn1sec197.txt  VesicleSyn1sec198.txt
src/projects/EllipsoidFitting/data/Vesicle18/: VesicleSyn1sec192.txt  VesicleSyn1sec193.txt  VesicleSyn1sec194.txt  VesicleSyn1sec195.txt  VesicleSyn1sec196.txt  VesicleSyn1sec197.txt  VesicleSyn1sec198.txt  VesicleSyn1sec199.txt  VesicleSyn1sec200.txt  VesicleSyn1sec201.txt  VesicleSyn1sec202.txt  (+2 more)
src/projects/PMPH/assignment1/: cudaInterface.cu
src/projects/Smoke2D/: Smoke2D.cpp  Smoke2D.hpp  main.cpp
src/projects/VesicleChanVese3d/: main.cpp
(+721 files in other folders)
